# liz-shortcut-helper

./: Cargo.toml  PKGBUILD  README.md  input.json
andthe/: Cargo.toml
andthe/src/: lib.rs
bluebird/: Cargo.toml
bluebird/src/: commands.rs  main.rs  rhythm.rs  socket.rs
bluebird/src/tools/: db.rs  exec.rs  mod.rs  rhythm.rs
data/: keymap.json  keymap_builtin.json  music_sheet.lock.json  music_sheet.lock.json.bak  shortcuts-lock.json  shortcuts.json
data/backup/: ddd.py  output.json  shortcuts.json
data/sheets/: cmd.json  examples.json  kwin.json  nvim.json  test.json  yazi.json
doc/notes/: tasks.md
doc/ydotool/: README.md  customize.md  ydotoold.service
liz/: Cargo.toml
liz/src/: main.rs  socket.rs  ui.rs
scripts/: build_package.sh  copy_to_config_liz.sh  generate_default_rhythm.sh  install.sh  install_dependencies.sh  setup_bluebird_service.sh  setup_ydotoold_service.sh  uninstall.sh
