[package]
name = "andthe"
version = "0.1.0"
edition = "2021"
authors = ["Felix Wang <wangzekun.felix@gmail.com>"]
description = "Defines the communication protocol between Liz and Bluebird for liz-shortcut-helper"
license = "GPL-3.0"
repository = "https://github.com/philia897/liz-shortcut-helper"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
