[package]
name = "bluebird"
version = "0.1.1"
edition = "2021"
authors = ["Felix Wang <wangzekun.felix@gmail.com>"]
description = "The daemon hearing, executing and responding to the commends from Liz for liz-shortcut-helper"
license = "GPL-3.0"
repository = "https://github.com/philia897/liz-shortcut-helper"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
signal-hook = "0.3"
toml = "0.7"
dirs = "4.0"
andthe = { path = "../andthe" }

