[package]
name = "liz"
version = "0.1.1"
edition = "2021"
authors = ["Felix Wang <wangzekun.felix@gmail.com>"]
description = "The client to send commands to bluebird for liz-shortcut-helper"
license = "GPL-3.0"
repository = "https://github.com/philia897/liz-shortcut-helper"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
andthe = { path = "../andthe" }
